--- a/src/s.yaml
+++ b/src/s.yaml
@@ -31,6 +31,7 @@ services:                                                                       
           image: registry-vpc.${vars.region}.aliyuncs.com/taimatsu/vault:alpine     # 函数镜像保存地址
         environmentVariables:                                                       # 环境变量
           DATA_FOLDER: '/mnt/auto'                                                  # NAS 挂载路径
+          DATABASE_URL: '/mnt/auto/db.sqlite3'                                      # 数据库挂载路径
           SIGNUPS_ALLOWED: true                                                     # 允许新用户注册
           INVITATIONS_ALLOWED: true                                                 # 允许邀请新用户
       triggers:                                                                     # 触发器配置
@@ -45,13 +46,13 @@ services:                                                                       
               - PUT                                                                 # PUT 方法
               - DELETE                                                              # DELETE 方法
               - HEAD                                                                # HEAD 方法
-      customDomains:
-        - domainName: auto
-          protocol: HTTP
-          routeConfigs:
-            - path: '/*'
-              methods:
-                - GET
-                - POST
-                - PUT
-                - DELETE
+      # customDomains:
+      #   - domainName: auto
+      #     protocol: HTTP
+      #     routeConfigs:
+      #       - path: '/*'
+      #         methods:
+      #           - GET
+      #           - POST
+      #           - PUT
+      #           - DELETE
