--- a/publish.yaml
+++ b/publish.yaml
@@ -3,31 +3,32 @@ Type: Application
 Name: vaultwarden-aliyun
 Provider:
   - 阿里云 
-Version: 1.6.0
+Version: 1.7.0
 Description: 基于阿里云函数计算FC一键部署部署Vaultwarden
 HomePage: https://github.com/QinYangWang/vaultwarden-aliyun
 Tags: 
   - 部署函数
   - 部署组件
 Category: 开源项目
-Service: # 使用的服务
-  函数计算: # 函数计算/容器服务/镜像服务/消息队列/工作流/CDN/对象存储/表格存储/MNS/日志服务/API网关/数据库/解析服务/云应用/其他
-    Authorities: #权限描述
+Service:
+  函数计算:
+    Authorities:
       - AliyunContainerRegistryFullAccess
       - AliyunVPCFullAccess
       - AliyunNASFullAccess
       - AliyunFCFullAccess
-Parameters: # 标准的JSON Scheme
+Parameters:
   type: object
-  additionalProperties: true # 不允许增加其他属性
-  required: # 必填项
+  additionalProperties: true
+  required:
     - region
+    - nameSpace
   properties:
     region:
       title: 地域
       type: string
-      default: cn-hangzhou
-      description: 创建应用所在的地区
+      default: cn-hongkong
+      description: 创建应用所在的地区，推荐国外地区
       enum:
         - cn-qingdao
         - cn-beijing
@@ -46,3 +47,12 @@ Parameters: # 标准的JSON Scheme
         - us-east-1
         - eu-central-1
         - eu-west-1
+    database:
+      title: 数据库地址
+      type: string
+      default: /mnt/auto/db.sqlite3
+      description: 数据存储数据库地址，默认为 /mnt/auto/db.sqlite3
+    namespace:
+      title: 镜像仓库命名空间
+      type: string
+      description: 镜像仓库命名空间
