--- a/src/s.yaml
+++ b/src/s.yaml
@@ -1,58 +1,59 @@
-edition: 2.0.0                                                                      # 命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
-name: vaultwarden-aliyun                                                            # 项目名称
-access: "{{ access }}"                                                              # 秘钥别名
-vars:                                                                               # 全局变量
-  region: "{{ region }}"                                                            # 地域
-services:                                                                           # 服务配置
-  vaultwarden:                                                                      # 模块名称
-    component: devsapp/fc                                                           # 组件名称
-    actions:                                                                        # 自定义执行逻辑，关于 actions 的使用
-      pre-deploy:                                                                   # 在deploy之前运行
-        - component: fc build --use-docker --dockerfile ./code/Dockerfile           # 要运行的组件，格式为 component: 组件名 命令 参数
-    props:                                                                          # 组件的属性值
-      region: ${vars.region}                                                        # 地域
-      service:                                                                      # 服务配置
-        name: vaultwarden-service                                                   # service 名称
-        description: vaultwarden fc component                                       # service 的简短描述
-        internetAccess: true                                                        # 设为 true 让函数可以访问公网
-        vpcConfig: auto                                                             # VPC 配置, 配置后函数可以访问指定 NAS
-        nasConfig: auto                                                             # NAS 配置, 配置后函数可以访问指定 NAS
-      function:                                                                     # 函数配置
-        name: vaultwarden-function                                                  # 函数名称
-        description: 'vaultwarden for aliyun fc'                                    # 函数的简短描述 
-        memorySize: 128                                                             # 函数的内存规格
-        runtime: custom-container                                                   # 函数的运行时
-        timeout: 7200                                                               # 函数的运行超时时间
-        caPort: 80                                                                  # CustomContainer/Runtime 指定端口
-        cpu: 0.05                                                                   # 函数的 CPU 规格
-        diskSize: 512                                                               # 函数的磁盘规格
-        code: ./code                                                                # 函数的代码路径
-        customContainerConfig:                                                      # 函数镜像配置
-          image: registry-vpc.${vars.region}.aliyuncs.com/taimatsu/vault:alpine     # 函数镜像保存地址
-        environmentVariables:                                                       # 环境变量
-          DATA_FOLDER: '/mnt/auto'                                                  # NAS 挂载路径
-          DATABASE_URL: '/mnt/auto/db.sqlite3'                                      # 数据库挂载路径
-          SIGNUPS_ALLOWED: true                                                     # 允许新用户注册
-          INVITATIONS_ALLOWED: true                                                 # 允许邀请新用户
-      triggers:                                                                     # 触发器配置
-        - name: httpTrigger                                                         # 触发器名称
-          type: http                                                                # 触发器类型
-          config:                                                                   # 触发器配置
-            authType: anonymous                                                     # 鉴权类型，可选值：anonymous、function
-            disableURLInternet: false                                               # 是否禁用公网访问 URL
-            methods:                                                                # 触发器支持的访问方法，可选值：GET、POST、PUT、DELETE、HEAD
-              - GET                                                                 # GET 方法
-              - POST                                                                # POST 方法
-              - PUT                                                                 # PUT 方法
-              - DELETE                                                              # DELETE 方法
-              - HEAD                                                                # HEAD 方法
-      # customDomains:
-      #   - domainName: auto
-      #     protocol: HTTP
-      #     routeConfigs:
-      #       - path: '/*'
-      #         methods:
-      #           - GET
-      #           - POST
-      #           - PUT
-      #           - DELETE
+edition: 2.0.0                                                                                     # 命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+name: vaultwarden-aliyun                                                                           # 项目名称
+access: "{{ access }}"                                                                             # 秘钥别名
+vars:                                                                                              # 全局变量
+  region: "{{ region }}"                                                                           # 地域
+services:                                                                                          # 服务配置
+  vaultwarden:                                                                                     # 模块名称
+    component: devsapp/fc                                                                          # 组件名称
+    actions:                                                                                       # 自定义执行逻辑，关于 actions 的使用
+      pre-deploy:                                                                                  # 在deploy之前运行
+        - component: fc build --use-docker --dockerfile ./code/Dockerfile                          # 要运行的组件，格式为 component: 组件名 命令 参数
+    props:                                                                                         # 组件的属性值
+      region: ${vars.region}                                                                       # 地域
+      service:                                                                                     # 服务配置
+        name: vaultwarden-service                                                                  # service 名称
+        description: vaultwarden fc component                                                      # service 的简短描述
+        internetAccess: true                                                                       # 设为 true 让函数可以访问公网
+        vpcConfig: auto                                                                            # VPC 配置, 配置后函数可以访问指定 NAS
+        nasConfig: auto                                                                            # NAS 配置, 配置后函数可以访问指定 NAS
+      function:                                                                                    # 函数配置
+        name: vaultwarden-function                                                                 # 函数名称
+        description: 'vaultwarden for aliyun fc'                                                   # 函数的简短描述 
+        memorySize: 128                                                                            # 函数的内存规格
+        runtime: custom-container                                                                  # 函数的运行时
+        timeout: 7200                                                                              # 函数的运行超时时间
+        caPort: 80                                                                                 # CustomContainer/Runtime 指定端口
+        cpu: 0.05                                                                                  # 函数的 CPU 规格
+        diskSize: 512                                                                              # 函数的磁盘规格
+        code: ./code                                                                               # 函数的代码路径
+        customContainerConfig:                                                                     # 函数镜像配置
+          image: registry-vpc.${vars.region}.aliyuncs.com/${vars.namespace}/vaultwarden:alpine     # 函数镜像仓库地址
+        environmentVariables:                                                                      # 环境变量
+          DATA_FOLDER: '/mnt/auto'                                                                 # NAS 挂载路径
+          DATABASE_URL: ${vars.database}                                                           # 数据库挂载路径
+          SIGNUPS_ALLOWED: true                                                                    # 允许新用户注册
+          INVITATIONS_ALLOWED: true                                                                # 允许邀请新用户
+      triggers:                                                                                    # 触发器配置
+        - name: httpTrigger                                                                        # 触发器名称
+          type: http                                                                               # 触发器类型
+          config:                                                                                  # 触发器配置
+            authType: anonymous                                                                    # 鉴权类型，可选值：anonymous、function
+            disableURLInternet: false                                                              # 是否禁用公网访问 URL
+            methods:                                                                               # 触发器支持的访问方法，可选值：GET、POST、PUT、DELETE、HEAD
+              - GET                                                                                # GET 方法
+              - POST                                                                               # POST 方法
+              - PUT                                                                                # PUT 方法
+              - DELETE                                                                             # DELETE 方法
+              - HEAD                                                                               # HEAD 方法
+      customDomains:                                                                               # 自定义域名
+        - domainName: auto                                                                         # 域名，如果是 auto 取值，系统则会默认分配域名
+          protocol: HTTP,HTTPS                                                                     # 协议，取值：HTTP, HTTP,HTTPS
+          routeConfigs:                                                                            # 路由配置
+            - path: '/*'                                                                           # 路径
+              methods:                                                                             # 支持的请求方法列表
+                - GET                                                                              # GET 方法
+                - POST                                                                             # POST 方法
+                - PUT                                                                              # PUT 方法
+                - DELETE                                                                           # DELETE 方法
+                - HEAD                                                                             # HEAD 方法
