--- a/publish.yaml
+++ b/publish.yaml
@@ -3,7 +3,7 @@ Type: Application
 Name: vaultwarden-aliyun
 Provider:
   - 阿里云 
-Version: 1.7.0
+Version: 1.8.0
 Description: 基于阿里云函数计算FC一键部署部署Vaultwarden
 HomePage: https://github.com/QinYangWang/vaultwarden-aliyun
 Tags: 
@@ -22,7 +22,7 @@ Parameters:
   additionalProperties: true
   required:
     - region
-    - nameSpace
+    - namespace
   properties:
     region:
       title: 地域
