--- a/src/s.yaml
+++ b/src/s.yaml
@@ -3,6 +3,8 @@ name: vaultwarden-aliyun                                                        
 access: "{{ access }}"                                                                             # 秘钥别名
 vars:                                                                                              # 全局变量
   region: "{{ region }}"                                                                           # 地域
+  namespace: "{{ namespace }}"                                                                     # 容器镜像服务命名空间
+  database: "{{ database }}"                                                                       # 数据库地址
 services:                                                                                          # 服务配置
   vaultwarden:                                                                                     # 模块名称
     component: devsapp/fc                                                                          # 组件名称
